docs: reescribir el plan contrastando cada requisito con el enunciado
La version anterior tomaba como requisito el desglose del analisis de brechas,
que en algunos puntos era interpretacion propia. Ahora cada linea esta
contrastada con Proyecto_Final_V3.pdf y lo que es criterio nuestro se marca
como tal.

Correcciones de bulto:

- Faltaba el area "Presentacion final" (5%). La tabla de evaluacion sumaba 95%
  y el bloque estaba sin empezar. Se anade como Ola 6 con las tres tareas
  minimas y se reserva tiempo explicito para el.
- TEST-1 vuelve a ser obligatorio: el enunciado exige literalmente probar
  Keycloak con Testcontainers. La version anterior lo habia bajado de prioridad.
- "Policies" aparece nombrado en el modelo de seguridad exigido, de modo que
  G-1 deja de ser puramente opcional.
- Se descarta el SPI de metricas de Keycloak: el enunciado pide "fallos de
  autenticacion", que un 401 del backend satisface. Pasa a mejoras.
- Se anade la lista de entregables como checklist de cierre, el desglose de las
  8 capas de testing y la traza de las 10 etapas de pipeline exigidas en ambos
  pipelines, donde Jenkins tiene 8 y le faltan E2E, security scan y quality gate.
- Se registra que hay 13 issues y ninguno es un bug, pese a haberse corregido
  varios ya documentados.